# fsmdriver

./: .gitignore  CMakeLists.txt  D  Doxyfile  FSMDriver.md  FSMDriver.md~  FSM_Description.md  Makefile  README(fsmdriver).md  README.md  doxyfile  fsmdriver.cpp  results.txt  scr-client.dox  state.cpp  state.h
FSMDriver/: ApproachingCurve.cpp  ApproachingCurve.h  Curve.cpp  Curve.h  FSM.h  FSMDriver.cpp  FSMDriver.h  InsideTrack.cpp  InsideTrack.h  Log.h  OutOfTrack.cpp  OutOfTrack.h  State.h  StraightLine.cpp  StraightLine.h  Stuck.cpp  Stuck.h
FSMDriver Genetic Algorithm/: DriverGeneticAlgorithm.cpp  DriverGeneticAlgorithm.h
FSMDriver3/: FSM.h  FSMDriver.cpp  FSMDriver.h  FSMDriver3.cpp  FSMDriver3.h  InsideTrack.cpp  OutOfTrack.cpp  OutOfTrack.h  Stuck.cpp
FSMDriver5/: Curve.cpp  FSMDriver.h  FSMDriver5.cpp  FSMDriver5.h  OutOfTrack.cpp  OutOfTrack.h  Stuck.cpp  Stuck.h
FSMDriver_Genetic_Algorithm/: DriverGeneticAlgorithm.cpp  DriverGeneticAlgorithm.h
WPOS/: Background.tex  Conclusions.tex  FSMDriver.tex  Introduction.tex  Methodology.tex  README.txt  Results.tex  SCR.tex  WPOS.tex  WPOS_FSMDriver.aux  WPOS_FSMDriver.tex  bibliografia.bib  newWPOS.tex
WPOS/apresentacao/: FSMDriver.tex  WPOS_Apresentacao.ppt  WPOS_Apresentacao_new.ppt
WPOS/artigo/: Background.tex  Conclusions.tex  Curve.txt  Introduction.tex  Results.tex  WPOS_FSMDriver.tex  bibliografia.bib
WSOP/: README.txt
configs/: cg1.xml  cs.xml  forza.xml
include/: BaseDriver.h  FsmDriver.h  PID.h  fsmdriver.h  fsmdriver.h~  state.h  state.h~
include/FSM/: ApproachingCurve.h  Constants.h  Curve.h  DrivingFSM.h  DrivingState.h  FSM.h  FSMDriver.h  InsideTrack.h  InsideTrack.h~  Knowledge.h  OutOfTrack.h  OutOfTrack.h~  StraightLine.h  Stuck.h  Stuck.h~
include/FSMDriver3/: FSMDriver3.h  FSMDriver3.h~
include/FSMDriver5/: FSMDriver5.h  Log.h
latex/: index.tex  md_README.tex  refman.tex
src/: FsmDriver.cpp  client.cpp  fsmdriver.cpp  state.cpp
src/FSM/: ApproachingCurve.cpp  Constants.cpp  Curve.cpp  DrivingState.cpp  FSMDriver.cpp  InsideTrack.cpp  Knowledge.cpp  OutOfTrack.cpp  StraightLine.cpp  Stuck.cpp
src/FSMDriver3/: FSMDriver3.cpp
src/FSMDriver5/: FSMDriver5.cpp
src/client/: CarControl.cpp  CarState.cpp  SimpleParser.cpp  WrapperBaseDriver.cpp  client.cpp
states/: ApproachingCurve.cpp  ApproachingCurve.h  Constants.cpp  Constants.h  Curve.cpp  Curve.h  InsideTrack.cpp  OutOfTrack.h  StraightLine.cpp  StraightLine.h  Stuck.h
templates/: car1-trb1-template.xcf
